REGRESSION(276827@main): A large animated image will flicker if it's displayed multiple times with different sizes https://bugs.webkit.org/show_bug.cgi?id=274671 rdar://128557319

Reviewed by Simon Fraser.

If the image is an animated image and the current frame is not available, we have
no choice but to decode it synchronously. Otherwise, a flicker will happen. This
was the BitmapImage::draw() behavior before 276827@main.

* LayoutTests/fast/images/animated-large-image-different-dest-size-expected.txt: Added.
* LayoutTests/fast/images/animated-large-image-different-dest-size.html: Added.
* LayoutTests/fast/images/resources/animated-red-green-blue-1000x1000-infinite.gif: Added.
* Source/WebCore/platform/graphics/BitmapImage.h:
* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::requestNativeImageAtIndexIfNeeded):
(WebCore::BitmapImageSource::nativeImageAtIndexCacheIfNeeded):
(WebCore::BitmapImageSource::nativeImageAtIndexRequestIfNeeded):
(WebCore::BitmapImageSource::nativeImageAtIndexForDrawing):
* Source/WebCore/platform/graphics/BitmapImageSource.h:
(WebCore::BitmapImageSource::decodeCountForTesting const): Deleted.
* Source/WebCore/platform/graphics/ImageSource.h:
(WebCore::ImageSource::blankDrawCountForTesting const):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::imageBlankDrawCount):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/279483@main